fix: dark mode shadow issue fix

--- a/components/PageContainer/pageContainer.module.scss
+++ b/components/PageContainer/pageContainer.module.scss
@@ -154,8 +154,8 @@
         .switch {
           position: absolute;
           left: calc($padding + 0.1rem);
-          height: calc($size - $padding - 0.2rem);
-          width: calc($size - $padding - 0.2rem);
+          height: calc($size - $padding - 0.1rem);
+          width: calc($size - $padding - 0.1rem);
           border-radius: 50%;
           transform: translateX(0);
           transition: transform 0.3s, background-color 0.1s ease;
