--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -47,7 +47,7 @@ a {
 
   ::-webkit-scrollbar {
     width: 5px;
-    background-color: $primary-text-color;
+    background-color: $neutral-light;
   }
 
   ::-webkit-scrollbar-thumb {
